test/asm/macro-arg-in-string.err
ERROR: macro-arg-in-string.asm(10) -> macro-arg-in-string.asm::print(2):
    Illegal character escape '!'
error: Assembly aborted (1 errors)!
